--- a/clash.yaml
+++ b/clash.yaml
@@ -172,7 +172,7 @@ proxy-providers:
   pawdroid: 
     type: http
     path: ./Proxy/pawroid.yaml
-    url: https://clv.lshan.eu.org/07/9c/c.yaml
+    url: https://clv.lshan.eu.org/07/12o/c.yaml
     health-check: 
       enable: true
       url: http://www.gstatic.com/generate_204
